--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
   </head>
   <body>
-    <div class="app-container"></div>
+    <div class="app-container"/>
     <script src="index.jsx"></script>
   </body>
 </html>
