--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,9 @@
 <html>
   <head>
     <title>myFlix</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    />
   </head>
   <body>
-    <div class="app-container"/>
+    <div class="app-container"></div>
     <script src="index.jsx"></script>
   </body>
 </html>
