--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="app-container"></div>
